# IcoChess

./: .gitignore  BitManipulation.cpp  BitManipulation.h  CMakeLists.txt  IcoChess.aps  IcoChess.cpp  IcoChess.h  IcoChessEngine.cpp  IcoChessEngine.h  IcoChessTests.cpp  IcoMoveGenerator.cpp  IcoMoveGenerator.h  IcoUtil.cpp  IcoUtil.h  Move.cpp  Move.h  Position.cpp  Position.h  README.md  resource.h
IcoChess/: IcoChess.sln
IcoChess/Debug/: IcoChess.ilk
IcoChess/IcoChess/: BitManipulation.cpp  BitManipulation.h  IcoChess.cpp  IcoChess.vcxproj  IcoChess.vcxproj.filters  IcoChessConstants.h  IcoMoveGenerator.cpp  IcoMoveGenerator.h  IcoUtil.cpp  IcoUtil.h  Move.cpp  Move.h  Position.cpp  Position.h
IcoChess/IcoChess/Debug/: icoutil.obj.enc  position.obj.enc  vc141.idb
IcoChess/IcoChess/Debug/IcoChess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  IcoChess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog
IcoChess/IcoChess/x64/Debug/: vc141.idb  vc142.idb
IcoChess/IcoChess/x64/Debug/IcoChess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  IcoChess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
IcoChess/x64/Debug/: IcoChess.ilk
src/: BoardRepresentation.hpp  Position.cpp  Position.hpp
tests/: position_tests.cpp
